app/assets/stylesheets/posts.scss
// Place all the styles related to the Posts controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.postLeft {
  margin-top: 5px;
  max-width: inherit;
  position: relative;
  float: top;
  display: flex;

  p {
    color: white;
    margin-top: 4px;
    margin-left: 10px;
    font-size: 15px;
    margin-bottom: 0px;
  }

  a {
    height: 23px;
  }

  #delete {
    float: right;
    position: absolute;
    right: 10px;
    color: gray;

    a {
      color: gray;

      &:hover {
        color: lightgrey;
      }
    }
  }
}

.UserPostInfo {
  display: block;
  height: 10px;
}

.postCenter {
  min-width: 150px;
  max-width: 90%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 7px;
}

.postForm {
  width: calc(100% - 150px);
  position: relative;
  float: left;
  margin-top: 10px;
  margin-left: 19px;
}

.imagePost {
  max-height: 300px;
  display: inline-block;
}

.postRight {
  max-width: 90px;
  position: relative;
  float: right;
  margin-top: -41px;


}


.post-ava {
  display: block;
  height: 45px;
  width: 45px;
  border-radius: 50px;
  border-color: white;
  border-style: solid;
}

.post {
  display: block;
  overflow: hidden;
  background-color: #4d7ce3;
  width: 60%;
  margin-bottom: 10px;
  margin-left: 7%;
  margin-right: auto;
  min-height: 150px;
  border-radius: 10px;
  border-style: solid;
  border-color: #C2D5E3;
}

.post-image {
  height: 105%;
  object-fit: cover;
  width: 70%;
  display: inline-block;
  overflow: hidden;
  margin-left: auto;
  margin-right: auto;
}

.img-wrapper {
  display: inline-block;
  overflow: hidden;
  border: solid white 1px;
  height: 60px;
  width: 60px;
  border-radius: 50%;
  //position: relative;
}

.PostFormText {
  background-color: #ffc17a;
  border-radius: 5px;
  width: 100%;
  overflow: hidden;
  display: block;
  font-size: 17px;
  padding-bottom: 10px;
  margin-left: -15px;
}


.PostFormContainer {
  height: inherit;
  width: inherit;

}

.PostFormUserAva {
  height: 60px;
  width: 60px;
  border-radius: 30px;
  border-style: solid;
  border-color: #ffa06c;
  margin-left: -2px;
  margin-top: -8px;
}

.PostFormButton {
  height: 35px;
  width: 60px;
}

.PostFormSubmitButton {
  height: 35px;
  width: 70px;
}

.CancelPostModal {
  border: none;
  border-radius: 15px;
  background-color: rgba(87, 174, 255, 0.66);
  cursor: grab;
}

.expandedImage {
  max-width: 75%;
  height: auto;
  width: auto;
  display: block;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 50px;
}

.imageExpander {
  max-width: 75%;
  margin: auto;
  display: block;
  border: none;
  outline: none;
  background: transparent;
}

.imageExpanderDual {
  max-width: inherit;
  display: block;
  border: none;
  outline: none;
  background: transparent;
}

.imagePost1 {
  max-width: 100%;
  height: auto;
  width: auto;
  display: block;
  margin: auto;
  padding-bottom: 10px;
  border-radius: 15px;
}

.imagePost2 {
  max-width: 100%;
  height: auto;
  width: auto;
  display: block;
  margin: auto;
  padding-bottom: 10px;
  border-radius: 15px;
}

.imagePost3 {
  max-width: 700px;
  height: auto;
  width: auto;
  padding-bottom: 10px;
  border-radius: 15px;
  margin-left: -75%;
  overflow: hidden;
}

.imageExpanderLong {
  border: none;
  outline: none;
  background: transparent;
  margin-bottom: 20px;
  border-radius: 15px;
  padding: 0px;
}

.firstCol {
  display: flex;
}

.sCol {
  max-width: 80%;
  display: block;
  margin-right: auto;
  margin-left: 2px;
  max-height: 295px;
}

.divCropperLong {
  max-width: 62%;
  min-width: 48%;
  height: 289px;
  overflow: hidden;
  border-radius: 6px;
  border: none;
  margin-left: 3px;
}

.divCropper {
  max-width: 62%;
  height: 143px;
  overflow: hidden;
  border-radius: 6px;
  object-fit: cover;
  object-position: 20% 0;
  min-width: 50%;
  border: none;

}

.bottomImage {
  margin-top: -87px;
}

.wave {
  width: 100%;
}

